added flatManyToMany flag as setting added test implementation for DatabaseFetcher fixed field collection field

--- a/src/DataDefinitionsBundle/Resources/config/serializer/Model.ExportDefinition.yml
+++ b/src/DataDefinitionsBundle/Resources/config/serializer/Model.ExportDefinition.yml
@@ -14,3 +14,7 @@ Wvision\Bundle\DataDefinitionsBundle\Model\ExportDefinition:
             expose: true
             type: boolean
             groups: [Detailed]
+        flatManyToMany:
+            expose: true
+            type: boolean
+            groups: [Detailed]
