--- a/src/DataDefinitionsBundle/Resources/config/services.yml
+++ b/src/DataDefinitionsBundle/Resources/config/services.yml
@@ -343,6 +343,10 @@ services:
         tags:
             - { name: data_definitions.fetcher, type: objects, form-type: Wvision\Bundle\DataDefinitionsBundle\Form\Type\Fetcher\ObjectsFetcherType }
 
+    Wvision\Bundle\DataDefinitionsBundle\Fetcher\DatabaseFetcher:
+        tags:
+            - { name: data_definitions.fetcher, type: database }
+
     ### LOADER
     Wvision\Bundle\DataDefinitionsBundle\Loader\PrimaryKeyLoader:
         tags:
