--- a/src/DataDefinitionsBundle/Resources/config/pimcore/routing.yml
+++ b/src/DataDefinitionsBundle/Resources/config/pimcore/routing.yml
@@ -57,6 +57,14 @@ data_definitions_admin_export_definitions:
             path: duplicate
             action: duplicate
             methods: [POST]
+          tables:
+            path: get-tables
+            action: getTables
+            methods: [GET]
+          dbColumns:
+            path: get-db-columns
+            action: getDbColumns
+            methods: [GET]        
 
 data_definitions_admin_export_import_rules:
     path: /admin/data_definitions/import_rules/export
