added custom fetcher remove test flag "flatManyToMany"

--- a/src/DataDefinitionsBundle/Resources/config/services.yml
+++ b/src/DataDefinitionsBundle/Resources/config/services.yml
@@ -347,6 +347,10 @@ services:
         tags:
             - { name: data_definitions.fetcher, type: database }
 
+    Wvision\Bundle\DataDefinitionsBundle\Fetcher\CustomFetcher:
+        tags:
+            - { name: data_definitions.fetcher, type: custom }
+
     ### LOADER
     Wvision\Bundle\DataDefinitionsBundle\Loader\PrimaryKeyLoader:
         tags:
