--- a/src/DataDefinitionsBundle/Resources/config/pimcore/routing.yml
+++ b/src/DataDefinitionsBundle/Resources/config/pimcore/routing.yml
@@ -64,7 +64,15 @@ data_definitions_admin_export_definitions:
           dbColumns:
             path: get-db-columns
             action: getDbColumns
-            methods: [GET]        
+            methods: [GET]
+          customServices:
+            path: get-custom-services
+            action: getCustomServices
+            methods: [GET]
+          customColumns:
+            path: get-custom-columns
+            action: getCustomColumns
+            methods: [GET]
 
 data_definitions_admin_export_import_rules:
     path: /admin/data_definitions/import_rules/export
