add configurable gc cycle

--- a/src/DataDefinitionsBundle/Resources/config/services.yml
+++ b/src/DataDefinitionsBundle/Resources/config/services.yml
@@ -31,9 +31,7 @@ services:
         - '@logger'
         - '@pimcore.model.factory'
         - '@coreshop.expression_language'
-        # START - CANDO CUSTOM CODE
-        - '@parameter_bag'
-        # END - CANDO CUSTOM CODE
+        - '%data_definitions.gc_cycle%'
       tags:
         - { name: monolog.logger, channel: import_definition }
         - { name: 'kernel.event_listener', event: 'data_definitions.stop', method: 'stop' }
@@ -50,9 +48,7 @@ services:
         - '@Wvision\Bundle\DataDefinitionsBundle\Context\ContextFactoryInterface'
         - '@event_dispatcher'
         - '@logger'
-        # START - CANDO CUSTOM CODE
-        - '@parameter_bag'
-        # END - CANDO CUSTOM CODE
+        - '%data_definitions.gc_cycle%'
       tags:
         - { name: monolog.logger, channel: export_definition }
         - { name: 'kernel.event_listener', event: 'data_definitions.stop', method: 'stop' }
