--- a/src/DataDefinitionsBundle/Resources/config/serializer/Model.ExportDefinition.yml
+++ b/src/DataDefinitionsBundle/Resources/config/serializer/Model.ExportDefinition.yml
@@ -2,6 +2,10 @@ Wvision\Bundle\DataDefinitionsBundle\Model\ExportDefinition:
   exclusion_policy: ALL
   xml_root_name: export_definition
   properties:
+    enableInheritance:
+      expose: true
+      type: boolean
+      groups: [Detailed]
     fetcher:
       expose: true
       type: string
@@ -14,3 +18,8 @@ Wvision\Bundle\DataDefinitionsBundle\Model\ExportDefinition:
       expose: true
       type: boolean
       groups: [ Detailed ]
+  virtual_properties:
+    isWriteable:
+      exp: object.isWriteable()
+      type: boolean
+      serialized_name: isWriteable
