Revert "Sync with latest upstream 4.x"

--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,40 +1,41 @@
 name: Static Tests (Lint, Stan)
 on:
   push:
-    branches: [ '4.0' ]
+    branches: [ master ]
   pull_request:
-    branches: [ '4.0' ]
+    branches: [ master ]
 
 jobs:
   lint:
     runs-on: ubuntu-latest
     env:
       APP_ENV: "test"
-      PIMCORE_TEST_DB_DSN: "mysql://root:root@127.0.0.1:3306/coreshop_test"
+      PIMCORE_TEST_DB_DSN: "mysql://root:root@127.0.0.1:3306/data_defs_test"
 
     strategy:
       matrix:
-        php: [ 8.1, 8.2 ]
-        pimcore: [ ^11.0 ]
-        dependencies: [ highest ]
+        php: [ 8.0, 8.1 ]
+        pimcore: [ ^10.5 ]
+        database: [ 'mysql:8.0' ]
+        dependencies: [ highest, lowest ]
         exclude:
           - php: 8.1
             dependencies: lowest
 
     services:
       database:
-        image: "mysql:8"
+        image: "${{ matrix.database }}"
         env:
           MYSQL_ROOT_PASSWORD: root
-          MYSQL_DATABASE: coreshop_test
+          MYSQL_DATABASE: data_defs_test
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
-    name: "${{ matrix.pimcore }}, PHP ${{ matrix.php }}, Deps ${{ matrix.dependencies }}"
+    name: "${{ matrix.pimcore }}, PHP ${{ matrix.php }}, DB ${{ matrix.database }}, Deps ${{ matrix.dependencies }}"
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
 
       - name: Install PHP
         uses: shivammathur/setup-php@v2
@@ -48,10 +49,10 @@ jobs:
 
       - name: Get composer cache directory
         id: composer-cache
-        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
+        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
 
       - name: Cache composer dependencies
-        uses: actions/cache@v3
+        uses: actions/cache@v1
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
@@ -60,13 +61,13 @@ jobs:
       - if: matrix.dependencies == 'highest'
         name: Install dependencies highest
         run: |
-          composer req pimcore/pimcore:${{ matrix.pimcore }} --no-interaction --no-scripts --no-update
+          composer req guzzlehttp/psr7 pimcore/pimcore:${{ matrix.pimcore }} --no-interaction --no-scripts --no-update
           composer update --no-progress --prefer-dist --optimize-autoloader
 
       - if: matrix.dependencies == 'lowest'
         name: Install dependencies lowest
         run: |
-          composer req pimcore/pimcore:${{ matrix.pimcore }} --no-interaction --no-scripts --no-update
+          composer req guzzlehttp/psr7 pimcore/pimcore:${{ matrix.pimcore }} --no-interaction --no-scripts --no-update
           composer update --no-progress --prefer-dist --optimize-autoloader --prefer-lowest
 
       - name: Validate YAML
