--- a/composer.json
+++ b/composer.json
@@ -32,18 +32,15 @@
     "php": ">=8.0",
     "ext-json": "*",
     "box/spout": "^3.0",
-    "coreshop/pimcore-bundle": "^4.0",
-    "coreshop/resource-bundle": "^4.0",
-    "coreshop/rule-bundle": "^4.0",
+    "coreshop/pimcore-bundle": "^3.0",
+    "coreshop/resource-bundle": "^3.0",
+    "coreshop/rule-bundle": "^3.0",
     "jms/serializer": "^3.17.1",
     "league/csv": "^9.7",
     "nyholm/psr7": "^1.5",
-    "pimcore/admin-ui-classic-bundle": "^1.0",
-    "pimcore/pimcore": "^11.0",
+    "pimcore/pimcore": "^10.5",
     "psr/http-client-implementation": "^1.0",
-    "psr/http-factory-implementation": "^1.0",
-    "symfony/dotenv": "^6.3",
-    "symfony/http-client": "^6.3"
+    "psr/http-factory-implementation": "^1.0"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
@@ -68,11 +65,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Wvision\\Bundle\\DataDefinitionsBundle\\Behat\\": "tests/DataDefinitionsBundle/Behat",
-      "Pimcore\\Model\\DataObject\\": [
-        "var/classes/DataObject",
-        "var/tmp/behat/var/classes/DataObject"
-      ]
+      "Wvision\\Bundle\\DataDefinitionsBundle\\Behat\\": "tests/DataDefinitionsBundle/Behat"
     },
     "classmap": [
       "src/Kernel.php"
