--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,6 @@
 imports:
     - { resource: services.yaml }
+    - { resource: migrations.yaml }
     - { resource: system.yml }
     - { resource: 'local/' }
 
