--- a/config/routes/dev/routes.yaml
+++ b/config/routes/dev/routes.yaml
@@ -1,2 +1,3 @@
 _pimcore_dev:
-    resource: "@PimcoreCoreBundle/config/routing_dev.yaml"
+    resource: "@PimcoreCoreBundle/Resources/config/routing_dev.yml"
+
