--- a/src/DataDefinitionsBundle/Resources/config/serializer/Model.Definition.yml
+++ b/src/DataDefinitionsBundle/Resources/config/serializer/Model.Definition.yml
@@ -4,7 +4,7 @@ Wvision\Bundle\DataDefinitionsBundle\Model\Definition:
   properties:
     id:
       expose: true
-      type: string
+      type: integer
       xml_attribute: true
       groups: [ List, Detailed ]
     name:
